# FastAPI

first_app/: pyproject.toml
first_app/first_app/: __init__.py
first_app/first_app/routes/: default.py
