[tool.poetry]
name = "first-app"
version = "0.1.0"
description = ""
authors = ["Yar00myr <ivanucaromir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"

[tool.poetry.scripts]
start_app = "first_app:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
